# aporn-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: workflow.yml
aporntool/: __init__.py  __main__.py  catalog.py  cli.py  config.py  detect.py  discovery.py  locations.py  manifest.py  paths.py  preflight.py  rigs.py  workspace.py
aporntool/stages/: __init__.py  composite_finish.py  crop.py  engine.py  finish.py  finish_cmds.py  foreground.py  preprocess.py  reflection_finish.py
aporntool/tools/: __init__.py  graxpert.py  siril.py
docs/superpowers/plans/: 2026-07-06-foundation.md  2026-07-06-mvp-finishers.md  2026-07-06-preprocess-core.md  2026-07-06-rig-profiles.md
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_mvp.py  test_cli_preprocess.py  test_config.py  test_detect.py  test_discovery.py  test_dslr_ingest.py  test_locations.py  test_manifest.py  test_milky_way_mode.py  test_paths.py  test_pipeline_params.py  test_preflight.py  test_rigs.py  test_workspace.py
tests/stages/: test_composite_finish.py  test_crop.py  test_dslr.py  test_engine.py  test_finish.py  test_finish_cmds.py  test_foreground.py  test_milky_way.py  test_preprocess.py  test_reflection_finish.py
tests/tools/: test_graxpert.py  test_siril.py
