[project]
name = "aporntool"
version = "0.2.0"
description = "Astropornography tool — one command from raw subs to a finished astrophoto"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "Pillow",
    "tifffile",
]                                       # numpy/scipy power the reflection dual-layer finish; astropy/Pillow/tifffile handle deliverable I/O

[project.scripts]
aporntool = "aporntool.cli:main"       # installs an `aporntool` command

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
